<resources>
    <string name="app_name">PlanOut</string>
    <string name="facebook_app_id">583937093195114</string>
    <string name="fb_login_protocol_scheme">fb583937093195114</string>
    <string name="fb_app_secret">baf9f35a22b00efef74c3f77706e74cf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="log_in">Log in</string>
    <string name="log_in2">Log In</string>
    <string name="join_now">Join now</string>
    <string name="discover_delicious">Explore your options</string>
    <string name="reserve_table">Make a reservation</string>
    <string name="instant_notification">Get your confirmation</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_password2">Forgot password?</string>
    <string name="send_link">Send Link</string>
    <string name="reset_pass2">Reset Password</string>
    <string name="reset_pass">Reset password</string>
    <string name="check_your_email">Email Sent</string>
    <string name="we_have_sent">An email with instructions on how to reset your\npassword has been sent.</string>
    <string name="done">Done</string>
    <string name="did_not_receive">Did not receive the email? check your spam\nfilter, or <font color="#429488"><b>try another email address</b></font></string>
    <string name="or_continue_with">Or continue with</string>
    <string name="visitor">Visitor</string>
    <string name="company">Business</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_small">Sign up</string>
    <string name="full_name2">Full Name*</string>
    <string name="full_name">Full name*</string>
    <string name="full_name1">Full name</string>
    <string name="company_name">Business name*</string>
    <string name="password">Password*</string>
    <string name="password1">Password</string>
    <string name="password2">Confirm password</string>
    <string name="email">Email*</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_industry">Select categories*</string>
    <string name="min_1_and_max_3_selections">Min 1 and Max 3 selections</string>
    <string name="telephone_e_g_22343456">Telephone (e.g. 22343456)*</string>
    <string name="mobile">Mobile*</string>
    <string name="try_again">Try again</string>
    <string name="oh_snap">Oh snap!</string>
    <string name="somthing_went_wrong_please_try_again">Something went wrong.\nPlease try again.</string>
    <string name="success">Success</string>
    <string name="your_password_has_been_nreset_successfully">Your password has been\nreset successfully</string>
    <string name="create_new_password">Create new password</string>
    <string name="no_data_found">No data found!</string>
    <string name="saved_search_title">Saved search</string>
    <string name="favorite_title">Favorites</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_saved_search">Delete saved search</string>
    <string name="are_you_sure_you_want_to_delete_saved_search">Are you sure you want to\ndelete this saved search?</string>
    <string name="edit_profile_u"><u>Edit profile</u></string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_nlogout">Are you sure you want\nto Logout?</string>
    <string name="save_changes">Save changes</string>
    <string name="caution_clicking_on_the_delete_button_will_delete_your_account_permanently"><font color="#FF3838">Caution:</font> Clicking on the delete button will delete your account permanently.</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to\ndelete your account?</string>
    <string name="please_select_the_topic">Please select the Topic</string>
    <string name="message">Message…</string>
    <string name="submit">Submit</string>
    <string name="book">Book</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="old_password">Old password</string>
    <string name="change_password">Change password</string>
    <string name="mobile_label">Mobile</string>
    <string name="telephone_label">Telephone</string>
    <string name="fax_label">Fax</string>
    <string name="industries">Categories</string>
    <string name="tags">Tags</string>
    <string name="edit_company_profile_u"><u>Edit business profile</u></string>
    <string name="edit_company_profile">Edit business profile</string>
    <string name="photo_gallery">Photo gallery</string>
    <string name="min_1_and_max_10_selections">Min 1 and max 10 selections</string>
    <string name="add_images">Add images</string>
    <string name="show_all">Show all</string>
    <string name="locations">Locations</string>
    <string name="location">Location</string>
    <string name="add_location">Add location</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="fax">Fax*</string>
    <string name="select_tags">Select tags*</string>
    <string name="min_1_and_max_5_selections">Min 1 and Max 5 selections</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="explore_and_reserve">Explore and Reserve</string>
    <string name="popular_industries">Popular categories</string>
    <string name="beach_bar">Beach bar</string>
    <string name="show_more">Show more</string>
    <string name="restaurants">Restaurants</string>
    <string name="reserve">Reserve</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="please_enter_your_email_address_associated_nwith_your_account_to_reset_your_password">Please enter your email address associated\nwith your account to reset your password.</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="no_connection">No connection</string>
    <string name="something_went_wrong">Sorry, we couldn\'t find an complete information please try again.</string>
    <string name="telephone_mus_be_8_char">The telephone must be at least 8 characters.</string>
    <string name="mobile_must_be_8_char">The mobile must be at least 8 characters.</string>
    <string name="events">Events</string>
    <string name="reservation">Reservation</string>
    <string name="sub_account">Sub account</string>
    <string name="payment_history">Payment history</string>
    <string name="language">Language</string>
    <string name="gallery">Gallery</string>
    <string name="working_days_hrs">Working days/hrs</string>
    <string name="subscription">Subscription</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="select_your_location">Select your location</string>
    <string name="your_location">Your location</string>
    <string name="api_key2">AIzaSyDT4xHAGWltV3HR5x02rwlrxSg5gTsP16c</string>
    <string name="api_key">AIzaSyDa5_yaEvRVkwQri1y11JiJrxySiVNNpUU</string>
    <string name="search_city">Search city</string>
    <string name="select_city">Select City</string>
    <string name="view_all">View all</string>
    <string name="decline">Decline</string>
    <string name="confirm">Confirm</string>
    <string name="city">City</string>
    <string name="industry">Category</string>
    <string name="categories">Categories</string>
    <string name="recent_search">Recent Search</string>
    <string name="save_search">Save Search</string>
    <string name="view"><u>View</u></string>
    <string name="clear_all">Clear All</string>
    <string name="search">Search</string>
    <string name="sort_amp_filters"><![CDATA[Sort & Filters]]></string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="canceled">Cancelled</string>
    <string name="declined">Declined</string>
    <string name="no_reservations_yet">No reservations yet!</string>
    <string name="notifications">Notifications</string>
    <string name="no_notification_yet">No notifications available yet!</string>
    <string name="reserve_a_table">Reserve a table</string>
    <string name="closed_for_reserve">Closed For Reservation</string>
    <string name="address_and_location">Address and location</string>
    <string name="locate">Locate</string>
    <string name="call">Call</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="no_of_people">No of people:</string>
    <string name="preferred_table">Preferred table:</string>
    <string name="contact_details">Contact details</string>
    <string name="mobile_number">Mobile number</string>
    <string name="extra_notes">Extra notes</string>
    <string name="notes_text_reser">Use a dummy email accounts since this is required upon registration, please take a note on this</string>
    <string name="write_here">Write here...</string>
    <string name="confirm_reservation">Confirm reservation</string>
    <string name="add_reservation">Add reservation</string>
    <string name="notes">Extra Notes : </string>
    <string name="address">Address</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="decline_reservation">Decline reservation</string>
    <string name="all">All</string>
    <string name="wrong_info">Wrong info</string>
    <string name="we_are_over_booked">We are over booked</string>
    <string name="we_are_close">We are close</string>
    <string name="currency">€%1$s</string>
    <string name="no_favourites_yet">No favorites yet!</string>
    <string name="payment_method">Payment method</string>
    <string name="summary">Summary</string>
    <string name="download">Download</string>
    <string name="view_in_browser">View in browser</string>
    <string name="you_have_no_nactive_package">You have no\nactive package</string>
    <string name="active_package">Active package</string>
    <string name="renew">Renew</string>
    <string name="next_renewal_on">Next renewal on</string>
    <string name="available_packages">Available packages</string>
    <string name="buy_now">Buy now</string>
    <string name="use_coupons">Use Coupons</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="select_date_range_first">Select dates range first</string>
    <string name="select_from_date_first">Select from date first</string>
    <string name="select_to_date_first">Select to date first</string>
    <string name="i_accept_terms_and_conditions"><u>I Accept terms and conditions…</u></string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="i_accept_terms_condition">I accept terms and conditions</string>
    <string name="create_event">Create event</string>
    <string name="edit">Edit</string>
    <string name="make_it_as_default_location">Make it as default location</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="new_notifications">New notifications</string>
</resources>