<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.MailSentActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_icon_back"
        android:layout_margin="@dimen/margin_20"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icon_mail_sent"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_your_email"
            style="@style/bold_helvetica_20dp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_50"/>

        <TextView
            android:id="@+id/txtSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_have_sent"
            style="@style/regular_helvetica_14dp"
            android:textSize="@dimen/margin_13"
            android:gravity="center"
            android:textColor="@color/gray_5B"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/bold_helvetica_14dp_light"
            android:textColor="@color/white"
            android:text="@string/done"
            android:paddingHorizontal="@dimen/margin_60"
            android:background="@drawable/bg_round_btn_drawable"
            app:backgroundTint="@color/app_green"
            android:paddingVertical="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_60"
            android:layout_marginBottom="@dimen/margin_10"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/did_not_receive"
        style="@style/regular_helvetica_14dp"
        android:textSize="@dimen/margin_13"
        android:gravity="center"
        android:textColor="@color/gray_5B"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_15"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_40"/>

</androidx.constraintlayout.widget.ConstraintLayout>