<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".fragments.VisitorNotificationFragment">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        style="@style/bold_helvetica_18dp"
        android:layout_marginHorizontal="@dimen/margin_15"
        android:text="@string/notifications"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtViewAll"/>

    <TextView
        android:id="@+id/txtViewAll"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        style="@style/regular_helvetica_16dp"
        android:layout_marginHorizontal="@dimen/margin_15"
        android:text="@string/view_all"
        android:gravity="center_vertical"
        android:textColor="@color/app_green"
        app:layout_constraintTop_toTopOf="@id/txtHeader"
        app:layout_constraintBottom_toBottomOf="@+id/txtHeader"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:background="@color/gray_F8"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader"
        android:layout_marginTop="@dimen/margin_15"/>

    <LinearLayout
        android:id="@+id/linNoMore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/viewTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification_no_data"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:textColor="@color/gray_5B_FF"
            style="@style/regular_helvetica_16dp"
            android:text="@string/no_notification_yet"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_EC_13"
        app:layout_constraintTop_toBottomOf="@+id/viewTop">

        <TextView
            android:id="@+id/txtNotiCount"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            style="@style/regular_helvetica_14dp"
            android:textSize="@dimen/margin_13"
            android:text="@string/new_notifications"
            android:singleLine="true"
            android:layout_marginVertical="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/margin_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtMarkViewAll"/>

        <TextView
            android:id="@+id/txtMarkViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/regular_helvetica_16dp"
            android:text="@string/mark_all_as_read"
            android:drawableStart="@drawable/ic_new_noti_mark"
            android:drawablePadding="@dimen/margin_10"
            android:textColor="@color/app_green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/margin_15"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerNewNotify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        app:layout_constraintTop_toBottomOf="@+id/contCount"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>