<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_icon_back"
        android:layout_margin="@dimen/margin_20"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        style="@style/bold_helvetica_24dp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_35"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"/>

    <TextView
        android:id="@+id/txtSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_email_address_associated_nwith_your_account_to_reset_your_password"
        style="@style/regular_helvetica_14dp"
        android:textSize="@dimen/margin_13"
        android:gravity="center"
        android:textColor="@color/gray_5B"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_15"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_icon_email"
        android:drawablePadding="@dimen/margin_15"
        android:background="@drawable/bg_round_edit_drawable"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        style="@style/editText_helvetica_regular"
        android:paddingHorizontal="@dimen/margin_20"
        android:paddingVertical="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin_15"
        app:layout_constraintTop_toBottomOf="@+id/txtSubTitle"/>
    <TextView
        android:id="@+id/emailErr"
        style="@style/regular_helvetica_12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginHorizontal="@dimen/margin_15"
        android:text="required field *"
        android:visibility="gone"
        android:textColor="@color/app_red"
        app:layout_constraintTop_toBottomOf="@id/editEmail" />

    <Button
        android:id="@+id/btnSendLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/reset_pass2"
        android:padding="@dimen/margin_15"
        style="@style/bold_helvetica_14dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_round_btn_drawable"
        app:backgroundTint="@color/app_green"
        app:layout_constraintTop_toBottomOf="@+id/emailErr"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginHorizontal="@dimen/margin_15"/>
</androidx.constraintlayout.widget.ConstraintLayout>